--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "saral.jpeg",
+      "src": "saral.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
